<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".login.Login">

    <ImageView
        android:id="@+id/iv_plant_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/plant_image_description" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="반가워요!"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_plant_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_id"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.App.TextInputLayout.Rounded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_id"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.App.TextInputLayout.Rounded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#557b5c"
        android:textStyle="bold"
        android:text="@string/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#557b5c"
        android:text="@string/button_login"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />



    <TextView
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_signup"
        android:textStyle="bold"
        android:textColor="#557b5c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_social_login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/social_login_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

    <View
        android:id="@+id/line_left"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        android:layout_marginRight="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_social_login_label"
        app:layout_constraintEnd_toStartOf="@+id/tv_social_login_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_social_login_label" />

    <View
        android:id="@+id/line_right"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        android:layout_marginLeft="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_social_login_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_social_login_label"
        app:layout_constraintTop_toTopOf="@+id/tv_social_login_label" />
    <!--
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_social_login_label">

            <ImageButton
                android:id="@+id/btn_google"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#FFFFFF"
                android:src="@drawable/ic_google_logo"
                android:scaleType="fitCenter"
                android:padding="8dp"
                android:contentDescription="@string/google_login"
                />

            <ImageButton
                android:id="@+id/btn_kakao"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#FFEB3B"
                android:src="@drawable/ic_kakao_logo"
                android:scaleType="fitCenter"
                android:padding="8dp"
                android:contentDescription="@string/kakao_login"
                />

            <ImageButton
                android:id="@+id/btn_naver"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:backgroundTint="#03C75A"
                android:src="@drawable/ic_naver_logo"
                android:scaleType="fitCenter"
                android:padding="8dp"
                android:contentDescription="@string/naver_login"
                />

        </LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>