<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".start.PlantRegistrationActivity"> <TextView
    android:id="@+id/tv_welcome_user"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:text="사용자님, 지금 키우고 있는 식물을 알려주세요"
    android:textSize="20sp"
    android:textStyle="bold"
    android:textColor="@android:color/black"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_plant_type"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.App.TextInputLayout.Rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_plant_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_plant_type"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_plant_nickname"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.App.TextInputLayout.Rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_plant_type">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_plant_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_plant_nickname"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_plant_date"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.App.TextInputLayout.Rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_plant_nickname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_plant_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_plant_start_date"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register_plant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#557b5c"
        android:text="@string/button_register_plant"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_plant_date" />

</androidx.constraintlayout.widget.ConstraintLayout>